# GradesManager

./: .gitignore  AddCourseDialog.cc  AddCourseDialog.h  AddGradeDialog.cc  AddGradeDialog.h  CMakeLists.txt  Course.cc  Course.h  Grade.cc  Grade.h  GradeManager.cc  GradeManager.h  GradeManagerGUI.cc  GradeManagerGUI.h  GradeManagerGUI.ui  Makefile  README.md  main.cc  main.cpp
